# claude-notifications

./: .gitignore  DO.md  FIXES-APPLIED.md  FIXES.md  INTEGRATION.md  LAYOUT-INTEGRATION.md  QUICK-REFERENCE.md  README.md  TASK.md  ZELLIJ-NOTIFY.md  diagnose-zellij.sh  index.js  install.sh  mise.toml  package-lock.json  package.json  postinstall.js  preuninstall.js  ruv-swarm-mcp.db  start-zellij-fresh.sh  test-integration.sh  test-notification-plugin.kdl  test-results.md  test-shell-escaping.sh  test-updated-layout.sh  test-zellij-cli.sh  test.sh  uninstall.sh
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
examples/: claude-code-settings.json  settings-with-zellij.json  settings-zellij-only.json  zellij-notify-examples.sh
lib/: config.js  zellij.js
zellij-plugin/: Cargo.toml  README.md  build.sh
zellij-plugin/.cargo/: config.toml
zellij-plugin/.github/workflows/: ci.yml
zellij-plugin/configs/examples/: accessibility.kdl  catppuccin.kdl  default.kdl  minimal.kdl
zellij-plugin/docs/: CONFIGURATION.md  INTEGRATION.md
zellij-plugin/src/: animation.rs  colors.rs  config.rs  event_bridge.rs  lib.rs  main.rs  notification.rs  queue.rs  renderer.rs  state.rs  tests.rs
